<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mensagemTv"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/mensagemTv" />

    <Button
        android:id="@+id/jogarBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/jogarBt"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/resultadoTv"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/resultadoTv" />

    <ImageView
        android:id="@+id/resultadoIv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/resultado2Iv"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:srcCompat="@drawable/dice_1" />

</LinearLayout>